# search-open-source-issues

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: daily-sync.yml
backend/: README.md  alembic.ini  fly.toml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_suggestions.py
backend/app/: celery_app.py  main.py  seed.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin.py  companies.py  issues.py  search.py  stats.py  suggestions.py
backend/app/core/: auth.py  config.py  database.py
backend/app/models/: __init__.py  company.py  issue.py  repository.py  suggestion.py
backend/app/schemas/: admin.py  company.py  issue.py  stats.py  suggestion.py
backend/app/services/: embedding_service.py  github_client.py  issue_service.py  scraper.py  search_cache.py  search_service.py  stats_service.py
backend/app/tasks/: __init__.py  embeddings.py  scraping.py  sync.py
backend/scripts/: __init__.py  crontab  generate_embeddings.py  sync.py
frontend/: package.json  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/contribute/: page.tsx
frontend/src/components/: hero-section.tsx  issues-browser.tsx
frontend/src/components/analytics/: posthog-provider.tsx
frontend/src/components/common/: company-avatar.tsx  label-badge.tsx  language-badge.tsx  pagination.tsx
frontend/src/components/contribute/: contribute-form.tsx
frontend/src/components/issues/: issue-card.tsx  issue-filters.tsx  issue-list.tsx
frontend/src/components/layout/: header.tsx
frontend/src/components/search/: search-bar.tsx  search-command.tsx
frontend/src/components/stats/: stats-bar.tsx
frontend/src/hooks/: use-companies.ts  use-issues.ts  use-stats.ts
frontend/src/lib/: api.ts  constants.ts  posthog.ts  types.ts
